// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell tests matches snapshot (number) 1`] = `
<View
  style={
    {
      "flex": 1,
      "margin": 10,
    }
  }
>
  <Text>
    5
  </Text>
</View>
`;

exports[`Cell tests matches snapshot (text) 1`] = `
<View
  style={
    {
      "flex": 1,
      "margin": 10,
    }
  }
>
  <Text>
    cell
  </Text>
</View>
`;

exports[`Set View tests matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7F0",
    }
  }
  testID="set-view-container-1"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-around",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "margin": 10,
        }
      }
    >
      <Text>
        reps: 12
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "margin": 10,
        }
      }
    >
      <Text>
        weight: 20
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "margin": 10,
        }
      }
    >
      <Text>
        rest: 60
      </Text>
    </View>
    <Text
      allowFontScaling={false}
      onPress={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      selectable={false}
      style={
        [
          {
            "color": "black",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="remove-set-1"
    >
      
    </Text>
  </View>
</View>
`;

exports[`Set tests matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7F0",
    }
  }
  testID="set-container"
>
  <TextInput
    keyboardType="numeric"
    onChangeText={[Function]}
    placeholder="please enter number off reps"
    style={
      {
        "fontSize": 16,
        "paddingBottom": 12,
      }
    }
    testID="reps-input"
    value=""
  />
  <TextInput
    keyboardType="numeric"
    onChangeText={[Function]}
    placeholder="please enter weight"
    style={
      {
        "fontSize": 16,
        "paddingBottom": 12,
      }
    }
    testID="weight-input"
    value=""
  />
  <TextInput
    keyboardType="numeric"
    onChangeText={[Function]}
    placeholder="please enter rest time"
    style={
      {
        "fontSize": 16,
        "paddingBottom": 12,
      }
    }
    testID="rest-input"
    value=""
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="save-button"
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#007AFF",
              "fontSize": 18,
              "margin": 8,
              "textAlign": "center",
            },
            {
              "color": "#003844",
            },
          ]
        }
      >
        save
      </Text>
    </View>
  </View>
</View>
`;

exports[`Weight tests matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#dbdbdb",
      "width": "100%",
    }
  }
  testID="weight-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#003844",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 8,
      }
    }
    testID="title-container"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 20,
        }
      }
    >
      Add Weight
    </Text>
    <Text
      allowFontScaling={false}
      onPress={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      selectable={false}
      style={
        [
          {
            "color": "white",
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="back-button"
    >
      
    </Text>
  </View>
  <TextInput
    onChangeText={[Function]}
    placeholder="please enter name here"
    style={
      {
        "fontSize": 16,
        "paddingBottom": 12,
      }
    }
    testID="name-input"
    value=""
  />
  <TextInput
    onChangeText={[Function]}
    placeholder="please enter muscles used"
    style={
      {
        "fontSize": 16,
        "paddingBottom": 12,
      }
    }
    testID="muscles-used-input"
    value=""
  />
  <TextInput
    keyboardType="numeric"
    onChangeText={[Function]}
    placeholder="please enter workout effort"
    style={
      {
        "fontSize": 16,
        "paddingBottom": 12,
      }
    }
    testID="workout-effort-input"
    value=""
  />
  <View
    style={
      {
        "backgroundColor": "#F3F7F0",
      }
    }
    testID="set-container"
  >
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      placeholder="please enter number off reps"
      style={
        {
          "fontSize": 16,
          "paddingBottom": 12,
        }
      }
      testID="reps-input"
      value=""
    />
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      placeholder="please enter weight"
      style={
        {
          "fontSize": 16,
          "paddingBottom": 12,
        }
      }
      testID="weight-input"
      value=""
    />
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      placeholder="please enter rest time"
      style={
        {
          "fontSize": 16,
          "paddingBottom": 12,
        }
      }
      testID="rest-input"
      value=""
    />
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="save-button"
    >
      <View
        style={
          [
            {},
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              {
                "color": "#003844",
              },
            ]
          }
        >
          save
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="add-button"
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#007AFF",
              "fontSize": 18,
              "margin": 8,
              "textAlign": "center",
            },
            {
              "color": "#003844",
            },
          ]
        }
      >
        add
      </Text>
    </View>
  </View>
</View>
`;
